Section Hide framework inclusion based on field values with customization and bug fixes and New Contact button improvements

--- a/Case_Work/Lightning Web Component/newCaseLWC/newCaseLWC.css
+++ b/Case_Work/Lightning Web Component/newCaseLWC/newCaseLWC.css
@@ -3,4 +3,14 @@
 }
 .slds-section__title {
     font-weight: normal;
+    background-color: #f3f3f3;
+}
+.required-indicator {
+    color: red;
+}
+.italic-text {
+    font-style: italic;
+}
+.div-float-right {
+    float: right;
 }
