--- a/Case_Work/Aura/CustomCaseV2/CustomCaseV2.cmp
+++ b/Case_Work/Aura/CustomCaseV2/CustomCaseV2.cmp
@@ -2,14 +2,16 @@
   @description       : 
   @author            : Kuldeep Singh
   @group             : 
-  @last modified on  : 07-12-2024
+  @last modified on  : 07-13-2024
   @last modified by  : Kuldeep Singh
 -->
-<aura:component controller="CaseController" implements="lightning:actionOverride,force:hasRecordId" access="global">
+<aura:component controller="CaseController"
+  implements="lightning:actionOverride,lightning:isUrlAddressable, force:hasRecordId" access="global">
   <aura:attribute name="recordId" type="String" />
   <aura:attribute name="isModalOpen" type="Boolean" default="false" />
   <aura:attribute name="caseRecord" type="Case" />
   <aura:attribute name="headerText" type="String" />
+  <aura:attribute name="accountId" type="String" />
   <aura:attribute name="pageReference" type="Object" />
   <lightning:overlayLibrary aura:id="overlayLib" />
   <lightning:navigation aura:id="navService" />
