--- a/Case_Work/Lightning Web Component/newCaseLWC/newCaseLWC.css
+++ b/Case_Work/Lightning Web Component/newCaseLWC/newCaseLWC.css
@@ -1,20 +1,25 @@
 .slds-section {
     border: none;
 }
+
 .slds-section__title {
     font-weight: normal;
     background-color: #f3f3f3;
 }
+
 .required-indicator {
     color: red;
 }
+
 .italic-text {
     font-style: italic;
 }
+
 .div-float-right {
     float: right;
 }
 
-.close {
-    display : none;
+.header-text {
+    font-weight: normal;
+    font-size: x-large;
 }
